--- a/lingo.html
+++ b/lingo.html
@@ -40,6 +40,8 @@
 		<div id="r5l4"></div>
 		<div id="r5l5"></div>
 	</div>
+	<input type="text" id="letter">
+	<button id="check">Check</button>
 <script type="text/javascript" src="lingo-nl.js"></script>
 </body>
 </html>
